{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 22,
  "lineage": "7e6fe889-9db4-e406-8c1f-7d0f0809a117",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304182266883:vpc/vpc-0d544c7f3e56b3d5e",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0d7459374810bf8c0",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0e29cb5627a6c1ac5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d544c7f3e56b3d5e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0687bc2d62ac39c89",
            "owner_id": "304182266883",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089d06ffb5472ec8b",
            "arn": "arn:aws:ec2:us-east-1:304182266883:elastic-ip/eipalloc-089d06ffb5472ec8b",
            "association_id": "eipassoc-0dfcba06a640a3566",
            "domain": "vpc",
            "id": "eipalloc-089d06ffb5472ec8b",
            "instance": "i-09b8eaa98bddf6325",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0da204ba39b12fd14",
            "private_dns": "ip-172-31-72-152.ec2.internal",
            "private_ip": "172.31.72.152",
            "public_dns": "ec2-3-90-80-203.compute-1.amazonaws.com",
            "public_ip": "3.90.80.203",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.mine_ec2",
            "aws_security_group.my_sg",
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mine_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07ff62358b87c7116",
            "arn": "arn:aws:ec2:us-east-1:304182266883:instance/i-09b8eaa98bddf6325",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b8eaa98bddf6325",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0da204ba39b12fd14"
              }
            ],
            "primary_network_interface_id": "eni-0da204ba39b12fd14",
            "private_dns": "ip-172-31-72-152.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.72.152",
            "public_dns": "ec2-3-236-219-102.compute-1.amazonaws.com",
            "public_ip": "3.236.219.102",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f883cfb7664ad3fa",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "my_sg_name"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e134c5589c6e06cf",
            "tags": {
              "Name": "mine_ec2"
            },
            "tags_all": {
              "Name": "mine_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d93618d0928ccf23"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "304182266883",
            "id": "i-09b8eaa98bddf6325",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.my_sg",
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304182266883:security-group/sg-0d93618d0928ccf23",
            "description": "Allow TLS inbound traffic at 80 and all outbound traffic",
            "egress": [],
            "id": "sg-0d93618d0928ccf23",
            "ingress": [],
            "name": "my_sg_name",
            "name_prefix": "",
            "owner_id": "304182266883",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my_sg_tag"
            },
            "tags_all": {
              "Name": "my_sg_tag"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d544c7f3e56b3d5e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "304182266883",
            "id": "sg-0d93618d0928ccf23",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304182266883:security-group-rule/sgr-0f0d761e55b1920e7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f0d761e55b1920e7",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0d93618d0928ccf23",
            "security_group_rule_id": "sgr-0f0d761e55b1920e7",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "304182266883",
            "id": "sgr-0f0d761e55b1920e7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.my_sg",
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304182266883:security-group-rule/sgr-0645fcfa701162b59",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0645fcfa701162b59",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0d93618d0928ccf23",
            "security_group_rule_id": "sgr-0645fcfa701162b59",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "304182266883",
            "id": "sgr-0645fcfa701162b59",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.my_sg",
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    }
  ]
}